# openrndt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LOG.md  PRD.md  README.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
docs/: evaluation-v0.1.0.md  evaluation.md  future-ideas.md
knowledge/: architecture.md  index.md  log.md  project.md  skill.md
knowledge/api/: index.md  known-issues.md  rndt-rest-api.md
knowledge/cli/: discover.md  get.md  index.md  search.md
knowledge/conventions/: error-handling.md  index.md  output-formats.md  testing.md
ref/: README.md  gpt_api.json  rest-api-rndt.md  sample-search-response.json
skills/rndt-explorer/: SKILL.md
skills/rndt-explorer/references/: categories.md  ogc-services.md  output-formats.md  result-structure.md  search-syntax.md  workflows.md
src/openrndt/: __init__.py  cli.py  client.py  codelists.py  config.py  item.py  output.py  search.py
tests/: conftest.py  test_cli.py  test_discover.py  test_item.py  test_output.py  test_retry.py  test_search.py
tests/fixtures/: item.json  item.xml
